Fix issue with overflow notes not rendering

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -189,7 +189,7 @@ li {
 .composition,
 .note {
   cursor:
-    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 48 48' width='48' height='48'%3e%3ccircle cx='24' cy='24' r='22' fill='%23000000' stroke='%23eb67ff' stroke-width='4' stroke-location='inside' /%3e%3c/svg%3e")
+    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' viewBox='0 0 48 48' width='48' height='48'%3e%3ccircle cx='24' cy='24' r='22' fill='%23000000' fill-opacity='0.8' stroke='%23eb67ff' stroke-width='4' stroke-location='inside' /%3e%3c/svg%3e")
       16 16,
     pointer;
 }
@@ -199,7 +199,7 @@ li {
   box-sizing: border-box;
   border-radius: 50%;
   border: 4px solid var(--primary-lighter);
-  background: #000;
+  background: rgba(0, 0, 0, 0.8);
   position: fixed;
   display: none;
   z-index: 10000;
